add preview storybook environments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   ci:
+    if: ${{ github.repository == 'primer/react-brand' }}
     name: Install and run tests
     runs-on: ubuntu-latest
     steps:
