--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -29,23 +29,41 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Get git output names
+        id: git
+        shell: bash
+        run: |
+          if [[ "${{ github.ref }}" != "refs/tags/"* ]]; then
+            if [[ ${{ github.event_name }} == 'pull_request' ]]; then
+              echo "::set-output name=current_branch::$HEAD_REF"
+            else
+              echo "::set-output name=current_branch::$REF_BRANCH"
+            fi
+          else
+            REF=$(printf "%q" "${{ github.ref }}")
+            REF_BRANCH=${REF/refs\/tags\/${{ inputs.strip_tag_prefix }}/}
+            echo "::set-output name=current_branch::$(eval printf "%s" "$REF_BRANCH")"
+          fi
+
       - uses: chrnorm/deployment-action@v1.2.0
         name: Create GitHub deployment for storybook
         id: storybook
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           environment: Preview Storybook
-          target_url: '${{ needs.deploy.outputs.deployment_url }}/storybook'
+          target_url: '${{ needs.deploy.outputs.deployment_url }}storybook'
+          ref: ${{ steps.git.outputs.current_branch }}
 
       - name: Update storybook deployment status (success)
         if: success()
         uses: chrnorm/deployment-status@v1.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          environment_url: '${{ needs.deploy.outputs.deployment_url }}/storybook'
-          target_url: '${{ needs.deploy.outputs.deployment_url }}/storybook'
+          environment_url: '${{ needs.deploy.outputs.deployment_url }}storybook'
+          target_url: '${{ needs.deploy.outputs.deployment_url }}storybook'
           state: 'success'
           deployment_id: ${{ steps.storybook.outputs.deployment_id }}
+          ref: ${{ steps.git.outputs.current_branch }}
 
       - name: Update storybook deployment status (failure)
         if: failure()
@@ -54,3 +72,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           state: 'failure'
           deployment_id: ${{ steps.storybook.outputs.deployment_id }}
+          ref: ${{ steps.git.outputs.current_branch }}
