--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -4,15 +4,53 @@ on:
   pull_request:
 
 permissions:
+  checks: write
   contents: read
+  deployments: write
   pages: write
   id-token: write
 
 jobs:
   deploy:
+    if: ${{ github.repository == 'primer/react-brand' }}
     name: Build and deploy
     uses: primer/.github/.github/workflows/deploy_preview.yml@main
     with:
       node_version: 16
+      install: npm ci && cd docs && npm ci && cd ..
       build: npm run build && npm run build:docs:preview
       output_dir: docs/public/
+
+  deploy-storybook:
+    if: ${{ github.repository == 'primer/react-brand' }}
+    name: Preview Storybook
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: chrnorm/deployment-action@v1.2.0
+        name: Create GitHub deployment for storybook
+        id: storybook
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          environment: Preview Storybook
+          target_url: '${{ needs.deploy.outputs.deployment_url }}storybook'
+
+      - name: Update storybook deployment status (success)
+        if: success()
+        uses: chrnorm/deployment-status@v1.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          environment_url: '${{ needs.deploy.outputs.deployment_url }}storybook'
+          target_url: '${{ needs.deploy.outputs.deployment_url }}storybook'
+          state: 'success'
+          deployment_id: ${{ steps.storybook.outputs.deployment_id }}
+
+      - name: Update storybook deployment status (failure)
+        if: failure()
+        uses: chrnorm/deployment-status@v1.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          state: 'failure'
+          deployment_id: ${{ steps.storybook.outputs.deployment_id }}
