--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -12,3 +12,8 @@
       url: /components/Heading
     - title: Text
       url: /components/Text
+
+- title: Primitives
+  children:
+    - title: Colors
+      url: /primitives/color
