--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "jsx": "react-jsx",
     "plugins": [{"name": "typescript-plugin-css-modules"}]
   },
-  "include": ["src/**/*", "scripts/**/*"]
+  "include": ["src/**/*", "scripts/**/*", "docs/**/*"]
 }
