--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -17,5 +17,6 @@ jobs:
     uses: primer/.github/.github/workflows/deploy.yml@main
     with:
       node_version: 16
+      install: npm ci && cd docs && npm ci && cd ..
       build: npm run build && npm run build:docs
       output_dir: docs/public/
