--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^9.8.8",
+    "color2k": "^2.0.0",
     "cross-env": "7.0.2",
     "css-loader": "^5.2.7",
     "eslint": "^8.12.0",
@@ -106,7 +107,6 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "clsx": "^1.1.1",
-    "color2k": "^2.0.0"
+    "clsx": "^1.1.1"
   }
 }
