Add base color scale and functional tokens (#29)

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -1,6 +1,11 @@
 - title: Getting started
   url: /getting-started
 
+- title: Primitives
+  children:
+    - title: Colors
+      url: /primitives/color
+
 - title: Components
   children:
     - title: Hero
