--- a/package.json
+++ b/package.json
@@ -24,19 +24,17 @@
   "scripts": {
     "build": "npm run clean && npm run build:css-types && npm run build:tokens && webpack",
     "build:css-types": "tcm -p 'src/**/*.module.css' .",
-    "build:css-vars": "ts-node --skipIgnore ./scripts/build-css-variables.ts",
     "build:types": "tsc --project tsconfig.build.json",
     "build:storybook": "scripts/build-storybook",
     "build:docs": "scripts/build-docs",
     "build:docs:preview": "scripts/build-docs preview",
-    "build:tokens": "node scripts/build-tokens.js && npm run build:css-vars",
+    "build:tokens": "node scripts/build-tokens.js",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
     "format": "prettier --check '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
     "format:fix": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
     "lint": "eslint '**/*.{js,ts,tsx,md,mdx}' --max-warnings=0",
     "lint:fix": "npm run lint -- --fix",
-    "postinstall": "cd docs && npm i",
     "release": "npm run build && changeset publish",
     "start": "npm run build && npm run start:storybook & npm run start:docs",
     "start:storybook": "start-storybook -p 6006",
@@ -44,7 +42,6 @@
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
     "test": "jest"
   },
-  "prettier": "@github/prettier-config",
   "peerDependencies": {
     "react": ">=17.0.0 <= 18.0.0",
     "react-dom": ">=17.0.0 <= 18.0.0"
@@ -54,14 +51,14 @@
     "@changesets/cli": "^2.21.0",
     "@github/prettier-config": "^0.0.4",
     "@primer/octicons-react": "^17.0.0",
-    "@primer/primitives": "0.0.0-20220428230003",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-interactions": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/builder-webpack5": "^6.4.19",
-    "@storybook/manager-webpack5": "^6.4.19",
-    "@storybook/react": "^6.4.19",
+    "@primer/primitives": "^7.8.3",
+    "@storybook/addon-actions": "^6.5.3",
+    "@storybook/addon-essentials": "^6.5.3",
+    "@storybook/addon-interactions": "^6.5.3",
+    "@storybook/addon-links": "^6.5.3",
+    "@storybook/builder-webpack5": "^6.5.3",
+    "@storybook/manager-webpack5": "^6.5.3",
+    "@storybook/react": "^6.5.3",
     "@storybook/testing-library": "^0.0.9",
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
@@ -75,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^9.8.8",
+    "color2k": "^2.0.0",
     "cross-env": "7.0.2",
     "css-loader": "^5.2.7",
     "eslint": "^8.12.0",
