add baseline River component

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -10,6 +10,8 @@
   children:
     - title: Hero
       url: /components/Hero
+    - title: River
+      url: /components/River
 
 - title: Base Components
   children:
