--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@changesets/changelog-github": "^0.4.3",
     "@changesets/cli": "^2.21.0",
     "@github/prettier-config": "^0.0.4",
+    "@primer/gatsby-theme-doctocat": "^4.0.0",
     "@primer/octicons-react": "^17.0.0",
     "@primer/primitives": "^7.8.3",
     "@storybook/addon-actions": "^6.5.3",
