--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build:css-types": "tcm -p 'src/**/*.module.css' .",
     "build:types": "tsc --project tsconfig.build.json",
     "build:storybook": "scripts/build-storybook",
+    "build:storybook:preview": "scripts/build-storybook preview",
     "build:docs": "scripts/build-docs",
     "build:docs:preview": "scripts/build-docs preview",
     "build:tokens": "node scripts/build-tokens.js",
@@ -52,14 +53,14 @@
     "@github/prettier-config": "^0.0.4",
     "@primer/octicons-react": "^17.0.0",
     "@primer/primitives": "^7.8.3",
-    "@storybook/addon-actions": "^6.5.3",
-    "@storybook/addon-essentials": "^6.5.3",
-    "@storybook/addon-interactions": "^6.5.3",
-    "@storybook/addon-links": "^6.5.3",
-    "@storybook/builder-webpack5": "^6.5.3",
-    "@storybook/manager-webpack5": "^6.5.3",
-    "@storybook/react": "^6.5.3",
-    "@storybook/testing-library": "^0.0.9",
+    "@storybook/addon-actions": "^6.5.6",
+    "@storybook/addon-essentials": "^6.5.6",
+    "@storybook/addon-interactions": "^6.5.6",
+    "@storybook/addon-links": "^6.5.6",
+    "@storybook/builder-webpack5": "^6.5.6",
+    "@storybook/manager-webpack5": "^6.5.6",
+    "@storybook/react": "^6.5.6",
+    "@storybook/testing-library": "^0.0.11",
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -83,6 +84,7 @@
     "eslint-plugin-primer-react": "^0.7.4",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "fast-glob": "^3.2.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
