--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -17,6 +17,6 @@ jobs:
     uses: primer/.github/.github/workflows/deploy.yml@main
     with:
       node_version: 16
-      install: npm ci && cd docs && npm ci && cd ..
+      install: npm ci --legacy-peer-deps && cd docs && npm ci --legacy-peer-deps && cd ..
       build: npm run build && npm run build:docs
       output_dir: docs/public/
