--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -13,7 +13,7 @@
     - title: River
       url: /components/River
 
-- title: Base Components
+- title: Base components
   children:
     - title: Heading
       url: /components/Heading
