add baseline River component and convert LinkButton to polymorphic Button (#33)

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -10,8 +10,10 @@
   children:
     - title: Hero
       url: /components/Hero
+    - title: River
+      url: /components/River
 
-- title: Base Components
+- title: Base components
   children:
     - title: Heading
       url: /components/Heading
