fix doc homepage links

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -1,5 +1,7 @@
-- title: Getting started
-  url: /getting-started
+- title: Introduction
+  children:
+    - title: Getting started
+      url: /getting-started
 
 - title: Primitives
   children:
