add docs for Theming and ThemeProvider

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -2,6 +2,8 @@
   children:
     - title: Getting started
       url: /getting-started
+    - title: Theming
+      url: /getting-started/theming
 
 - title: Primitives
   children:
