add baseline FAQ and Accordions (#37)

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -12,6 +12,8 @@
 
 - title: Components
   children:
+    - title: FAQ
+      url: /components/FAQ
     - title: Hero
       url: /components/Hero
     - title: River
