--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# integration testing artifacts
+next-js-test/
+cra-test/
