--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   ci:
-    if: ${{ false }}
+    if: ${{ github.repository == 'primer/react-brand' }}
     name: Install and run tests
     runs-on: ubuntu-latest
     steps:
