--- a/.github/workflows/release_canary.yml
+++ b/.github/workflows/release_canary.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release-canary:
-    if: ${{ false }}
+    if: ${{ github.repository == 'primer/react-brand' }}
     name: Canary
     uses: primer/.github/.github/workflows/release_canary.yml@main
     secrets:
