--- a/.github/workflows/integration_test_cra.yml
+++ b/.github/workflows/integration_test_cra.yml
@@ -65,6 +65,10 @@ jobs:
       - name: Excluded cypress tests in-place
         run: npx json -I -f ${{env.CRA_FOLDER}}/tsconfig.json -e 'this.exclude=["node_modules", "**/*.cy.ts"]'
 
+      - name: Using ESM imports
+        run: |
+          mv ${{env.CRA_FOLDER}}/src/fixtures/index.esm.ts ${{env.CRA_FOLDER}}/src/fixtures/index.ts
+
       - name: Testing compile-time build
         run: cd ${{env.CRA_FOLDER}} && npm run build
 
