--- a/.github/workflows/integration_test_astro.yml
+++ b/.github/workflows/integration_test_astro.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Prefer CommonJS imports
         run: |
           mv integration-tests/fixtures/index.cjs.ts integration-tests/fixtures/index.ts
+          rm integration-tests/fixtures/index.esm.ts
 
       - name: Copying required files
         run: |
