--- a/.github/workflows/integration_test_astro.yml
+++ b/.github/workflows/integration_test_astro.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   test:
     if: ${{ github.repository == 'primer/react-brand' }}
-    name: Astro - Typescript / React starter
+    name: Astro - React starter
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
