--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# integration testing artifacts
+next-js-test/
+cra-test/
+astro-test/
+remix-test/
