--- a/.github/workflows/integration_test_remix.yml
+++ b/.github/workflows/integration_test_remix.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   test:
-    if: ${{ github.repository == 'primer/react-brand' }}
+    if: false
     name: Remix.run
     runs-on: ubuntu-latest
     steps:
