--- a/.github/workflows/storybook_ui_tests.yml
+++ b/.github/workflows/storybook_ui_tests.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Serve Storybook and run tests
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-            "npm start:storybook -- --silent" \
+            "npm run start:storybook -- --silent" \
             "npx wait-on tcp:6006 && npm run test:storybook"
