--- a/.github/workflows/storybook_ui_tests.yml
+++ b/.github/workflows/storybook_ui_tests.yml
@@ -35,7 +35,4 @@ jobs:
         run: npm run build
 
       - name: Serve Storybook and run tests
-        run: |
-          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-            "npm run start:storybook -- --silent" \
-            "npx wait-on tcp:6006 && npm run test:storybook"
+        run: npx start-server-and-test 'start:storybook' 6006 'test:storybook'
