--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "moduleResolution": "node",
     "outDir": "lib",
     "jsx": "react-jsx",
-    "plugins": [{"name": "typescript-plugin-css-modules"}]
+    "plugins": [{"name": "typescript-plugin-css-modules"}],
+    "resolveJsonModule": true
   },
   "include": ["src/**/*", "scripts/**/*", "docs/**/*"],
   "exclude": ["integration-tests/**/*"]
