--- a/.github/workflows/diff_primitives.yml
+++ b/.github/workflows/diff_primitives.yml
@@ -53,54 +53,17 @@ jobs:
         uses: juliangruber/read-file-action@v1
         with:
           path: ./diff.md
+
       - name: Post diff
+        if: hashFiles('diff.md') != ''
         uses: phulsechinmay/rewritable-pr-comment@v0.2.1
         with:
           message: ${{ steps.diff.outputs.content }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COMMENT_IDENTIFIER: 'primitives-diff'
 
-      # - name: Run headless browser
-      #   if: hashFiles('index.html') != ''
-      #   uses: Eun/http-server-action@v1
-      #   with:
-      #     directory: '.'
-      #     port: 8080
-
-      # - name: Install capture-website-cli
-      #   if: hashFiles('index.html') != ''
-      #   shell: bash
-      #   run: |
-      #     echo "Installing dependencies ..."
-      #     npm install --global capture-website-cli 1> /dev/null
-
-      # - name: Screenshot
-      #   if: hashFiles('index.html') != ''
-      #   run: |
-      #     capture-website http://localhost:8080/index.html --output ./screenshot.png --element="#diff-table"
-      #     echo "Screenshot done"
-
-      # - name: Upload image
-      #   if: hashFiles('index.html') != ''
-      #   uses: devicons/public-upload-to-imgur@v2.2.1
-      #   id: imgur_step
-      #   with:
-      #     path: ./screenshot.png
-      #     client_id: ${{secrets.IMGUR_CLIENT_ID}}
-
-      # - name: Comment on the PR if tokens have changed
-      #   if: hashFiles('index.html') != ''
-      #   uses: phulsechinmay/rewritable-pr-comment@v0.2.1
-      #   with:
-      #     message: |
-      #       ### 🔍 Design token changes found
-
-      #       ![Diff of token changes](${{ fromJSON(steps.imgur_step.outputs.imgur_urls)[0] }})
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     COMMENT_IDENTIFIER: 'primitives-diff'
-
       - name: Comment on the PR about no results
-        if: hashFiles('index.html') == ''
+        if: hashFiles('diff.md') == ''
         uses: phulsechinmay/rewritable-pr-comment@v0.2.1
         with:
           message: |
