--- a/.github/workflows/ui_test_accessibility.yml
+++ b/.github/workflows/ui_test_accessibility.yml
@@ -1,4 +1,4 @@
-name: Storybook UI Tests
+name: UI test
 
 on:
   push:
@@ -35,4 +35,4 @@ jobs:
         run: npm run build
 
       - name: Serve Storybook and run tests
-        run: npx start-server-and-test 'start:storybook' 6006 'test:storybook'
+        run: npx start-server-and-test 'start:storybook' 6006 'npx test-storybook'
