--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "@github/prettier-config": "^0.0.4",
     "@primer/octicons-react": "^17.3.0",
     "@primer/primitives": "^7.8.3",
+    "@storybook/addon-a11y": "^6.5.9",
+    "@storybook/jest": "^0.0.10",
+    "@storybook/test-runner": "^0.5.0",
     "@storybook/addon-actions": "^6.5.6",
     "@storybook/addon-essentials": "^6.5.6",
-    "@storybook/addon-interactions": "^6.5.6",
+    "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.6",
     "@storybook/builder-webpack5": "^6.5.6",
     "@storybook/manager-webpack5": "^6.5.6",
@@ -72,6 +75,7 @@
     "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "axe-playwright": "^1.1.11",
     "autoprefixer": "^9.8.8",
     "color2k": "^2.0.0",
     "cross-env": "7.0.2",
