--- a/.github/workflows/ui_test_primitives_diff.yml
+++ b/.github/workflows/ui_test_primitives_diff.yml
@@ -1,4 +1,4 @@
-name: Diff
+name: UI test
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
 jobs:
   test:
     if: ${{ github.repository == 'primer/react-brand' }}
-    name: Primitives
+    name: Primitives diff
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
