add guard on diff.md

--- a/.github/workflows/ui_test_primitives_diff.yml
+++ b/.github/workflows/ui_test_primitives_diff.yml
@@ -49,6 +49,7 @@ jobs:
           npx ts-node ./scripts/ci-check-diff.ts
 
       - name: Read raw diff
+        if: hashFiles('diff.md') != ''
         id: diff
         uses: juliangruber/read-file-action@v1
         with:
