Add webpack-merge for config inheritance & webpack-bundle-analyzer

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "fonts"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:css-types && npm run build:tokens && webpack",
+    "analyze:build": "webpack -c webpack.analyze.js",
+    "build": "npm run clean && npm run build:css-types && npm run build:tokens && webpack -c webpack.build.js",
     "build:css-types": "tcm -p 'src/**/*.module.css' .",
     "build:types": "tsc --project tsconfig.build.json",
     "build:storybook": "scripts/build-storybook",
@@ -62,18 +63,19 @@
     "@changesets/changelog-github": "^0.4.3",
     "@changesets/cli": "^2.21.0",
     "@github/prettier-config": "^0.0.4",
+    "@playwright/test": "^1.24.0",
     "@primer/octicons-react": "^17.3.0",
     "@primer/primitives": "^7.8.3",
     "@storybook/addon-a11y": "^6.5.9",
-    "@storybook/jest": "^0.0.10",
-    "@storybook/test-runner": "^0.5.0",
     "@storybook/addon-actions": "^6.5.6",
     "@storybook/addon-essentials": "^6.5.6",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.6",
     "@storybook/builder-webpack5": "^6.5.6",
+    "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack5": "^6.5.6",
     "@storybook/react": "^6.5.6",
+    "@storybook/test-runner": "^0.5.0",
     "@storybook/testing-library": "^0.0.11",
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
@@ -86,8 +88,8 @@
     "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "axe-playwright": "^1.1.11",
     "autoprefixer": "^9.8.8",
+    "axe-playwright": "^1.1.11",
     "color2k": "^2.0.0",
     "cross-env": "7.0.2",
     "css-loader": "^6.7.1",
@@ -108,7 +110,6 @@
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
-    "@playwright/test": "^1.24.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -122,7 +123,9 @@
     "typescript": "^4.6.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "clsx": "^1.1.1"
