--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   deploy:
-    if: ${{ github.repository == 'primer/react-brand' }}
+    if: ${{ github.repository == 'primer/brand' }}
     name: Build and deploy
     uses: primer/.github/.github/workflows/deploy_preview.yml@main
     with:
@@ -22,7 +22,7 @@ jobs:
       output_dir: docs/public/
 
   deploy-storybook:
-    if: ${{ github.repository == 'primer/react-brand' }}
+    if: ${{ github.repository == 'primer/brand' }}
     name: Preview Storybook
     runs-on: ubuntu-latest
     needs: deploy
