--- a/.github/workflows/release_candidate.yml
+++ b/.github/workflows/release_candidate.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release-candidate:
-    if: ${{ github.repository == 'primer/react-brand' }}
+    if: ${{ github.repository == 'primer/brand' }}
     name: Candidate
     uses: primer/.github/.github/workflows/release_candidate.yml@main
     secrets:
