--- a/.github/workflows/ui_test_accessibility.yml
+++ b/.github/workflows/ui_test_accessibility.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   accessibility:
-    if: ${{ github.repository == 'primer/react-brand' }}
+    if: ${{ github.repository == 'primer/brand' }}
     name: Accessibility
     runs-on: ubuntu-latest
     steps:
