--- a/.github/workflows/ui_test_primitives_diff.yml
+++ b/.github/workflows/ui_test_primitives_diff.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test:
-    if: ${{ github.repository == 'primer/react-brand' }}
+    if: ${{ github.repository == 'primer/brand' }}
     name: Primitives diff
     runs-on: ubuntu-latest
     steps:
