fix broken yes command in remix test

--- a/.github/workflows/integration_test_remix.yml
+++ b/.github/workflows/integration_test_remix.yml
@@ -41,7 +41,7 @@ jobs:
         run: npm pack
 
       - name: Configuring Remix.run
-        run: yes | npx create-remix --template remix-run/indie-stack ${{env.TEST_FOLDER}}  --typescript
+        run: echo "yes" | npx create-remix --template remix-run/indie-stack remix-test  --typescript
 
       - name: Retrieving package version
         id: package-version
