--- a/.github/workflows/integration_test_remix.yml
+++ b/.github/workflows/integration_test_remix.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   test:
-    if: ${{ github.repository == 'primer/react-brand' }}
+    if: ${{ github.repository == 'primer/brand' }}
     name: Remix.run
     runs-on: ubuntu-latest
     steps:
@@ -41,7 +41,9 @@ jobs:
         run: npm pack
 
       - name: Configuring Remix.run
-        run: yes | npx create-remix --template remix-run/indie-stack ${{env.TEST_FOLDER}}  --typescript
+        # run: echo "yes" | npx create-remix --template remix-run/indie-stack remix-test  --typescript
+        # FIXME: remix.init failing. wait for fix to merge and re-enable: https://github.com/remix-run/indie-stack/issues/140
+        run: yes | npx create-remix --template https://github.com/MichaelDeBoey/indie-stack/tree/fix-convert-to-js ${{env.TEST_FOLDER}} --typescript
 
       - name: Retrieving package version
         id: package-version
