--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "repository": "primer/react-brand",
+  "repository": "primer/brand",
   "version": "1.1.0",
   "scripts": {
     "develop": "rm -rf .cache && gatsby develop",
